--- a/myCss.css
+++ b/myCss.css
@@ -181,23 +181,8 @@ h2, h3{
     margin-left: 70px;
 }
 
-/*@media screen and (max-width: 768px){
-    .container {
-        width: 100%;
-        height: 100%;
-        margin-left: 30px;
-        display: flex;
-        flex-direction: column;
-        transition: var(--tran-05);
-    }
-    section{
-        flex: none;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        
-    }
-}*/
+
+.disabled {
+    pointer-events: none;
+    opacity: 0.5;
+  }
