--- a/grid.css
+++ b/grid.css
@@ -62,7 +62,6 @@ section{
 }
 
 .detalle-contacto{
-
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column: 1/3;
@@ -80,81 +79,120 @@ section{
 
 @media screen and (max-width: 1090px) {
     
-    .estudios .sub-contenido {
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-    }
-    .experiencia .sub-contenido {
-      grid-template-columns: 1fr;
-    }
-    .contacto .sub-contenido {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr;
-      margin-left: 60px;
-      margin-right: 60px;
-    }
-
-    section{
-        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100vh;
-        margin-left: 60px;
-        margin-right: 60px;
-        scroll-snap-align: center; 
-    }
-    .container {
-        width: auto;
-        height: 100%;
-        margin-left: 30px;
-        display: flex;
-        scroll-behavior: smooth;
-        transition: var(--tran-05);
-    }
-
-    .sidebar header .toggle {
-      pointer-events: none;
-      opacity: 0.5;
-    }
+  .estudios .sub-contenido {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-left: 30px;
+    padding: 10px;
   }
-  
 
-  @media screen and (max-width: 660px) {
+  .experiencia .sub-contenido {
+    grid-template-columns: 1fr;
+  }
+
+  .contacto .sub-contenido {
+    grid-template-columns: 1fr;
+    grid-template-rows: 4fr;
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+
+  .redes-sociales{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    justify-content: space-around;
+    grid-column: -3/-1;
+  }
+     
+  .detalle-contacto{
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 50px;
+  }
+
+  section{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    margin-left: 60px;
+    margin-right: 60px;
+    scroll-snap-align: center; 
+  }
+
+  .container {
+    width: auto;
+    height: 100%;
+    margin-left: 30px;
+    display: flex;
+    scroll-behavior: smooth;
+    transition: var(--tran-05);
+  }
+
+  .sidebar header .toggle {
+    pointer-events: none;
+    opacity: 0.5;
+  }
+
+  .experiencia .sub-contenido {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .titulos {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 10px;
+    padding: 10px;
+  }
+
+  .titulo-experiencia {
+    padding-bottom: 20px;
+  }
+
+}
+
+
+@media screen and (max-width: 660px) {
     
-    .estudios .sub-contenido {
+  .estudios .sub-contenido {
       grid-template-columns: 1fr;
       grid-template-rows: repeat(4, 1fr);
-    }
-    .experiencia .sub-contenido {
+  }
+  .experiencia .sub-contenido {
       grid-template-columns: 1fr;
-    }
-    .contacto .sub-contenido {
+  }
+  .contacto .sub-contenido {
       grid-template-columns: 1fr;
       grid-template-rows: 1fr;
       margin-left: 60px;
       margin-right: 60px;
-    }
-
-    section{
-        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100vh;
-        margin-left: 60px;
-        margin-right: 60px;
-        scroll-snap-align: center; 
-    }
-    .container {
-        width: auto;
-        height: 100%;
-        margin-left: 30px;
-        display: flex;
-        scroll-behavior: smooth;
-        transition: var(--tran-05);
-    }
   }
+
+  section{
+        
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    margin-left: 60px;
+    margin-right: 60px;
+    scroll-snap-align: center; 
+  }
+  .container {
+    width: auto;
+    height: 100%;
+    margin-left: 30px;
+    display: flex;
+    scroll-behavior: smooth;
+    transition: var(--tran-05);
+    }
+}
   
