--- a/grid.css
+++ b/grid.css
@@ -1,94 +1,112 @@
 .container {
-    width: auto;
-    height: 100%;
-    margin-left: 40px;
-    scroll-snap-type: x mandatory;
-    overflow-x: scroll;
-    display: flex;
-    scroll-behavior: smooth;
-    transition: var(--tran-05);
+  width: auto;
+  height: 100%;
+  margin-left: 40px;
+  scroll-snap-type: x mandatory;
+  overflow-x: scroll;
+  display: flex;
+  scroll-behavior: smooth;
+  transition: var(--tran-05);
 }
 
-section{
-    flex: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-    scroll-snap-align: center; 
+section {
+  flex: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  scroll-snap-align: center;
 }
 
-
-.titulos{
-    margin: auto;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
+.titulos {
+  margin: auto;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
 }
 
-.titulos .separador{
-    margin: 20px;
+.titulos .separador {
+  margin: 20px;
 }
 
-.titulos .contenido{
-    margin-top: 20px;
-    align-items: center;
-    align-content: space-between;
+.titulos .contenido {
+  margin-top: 20px;
+  align-items: center;
+  align-content: space-between;
 }
 
-.estudios .sub-contenido{
-   
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    justify-items: center;
-
+.estudios .sub-contenido {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+  max-width: 800px;
 }
 
-.experiencia .sub-contenido{
-    margin-top: 40px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
+.experiencia .sub-contenido {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
 }
 
-.contacto .sub-contenido{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+.contacto .sub-contenido {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
 
-.detalle-contacto{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column: 1/3;
-    margin-bottom: 30px;
+.detalle-contacto {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column: 1/3;
+  margin-bottom: 30px;
 }
 
-.redes-sociales{
-    display: flex;
-    margin-top: 20px;
-    justify-content: space-around;
-    grid-column: -3/-1;
+.redes-sociales {
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-around;
+  grid-column: -3/-1;
 }
-
-
 
 @media screen and (max-width: 1090px) {
-    
+  .titulos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+  }
+
   .estudios .sub-contenido {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-left: 30px;
+    margin-left: 60px;
     padding: 10px;
+    max-width: 600px;
+  }
+
+  .estudio-1,
+  .estudio-2,
+  .estudio-3,
+  .estudio-4 {
+    padding: 40px;
   }
 
   .experiencia .sub-contenido {
-    grid-template-columns: 1fr;
+    display: flex;
+    justify-content: center;
+    max-width: 700px;
+  }
+
+  .experiencia-1,
+  .experiencia-2 {
+    padding: 40px;
   }
 
   .contacto .sub-contenido {
@@ -98,30 +116,35 @@ section{
     margin-right: 60px;
   }
 
-  .redes-sociales{
+  .redes-sociales {
     display: flex;
     flex-wrap: wrap;
     margin-top: 20px;
     justify-content: space-around;
     grid-column: -3/-1;
   }
-     
-  .detalle-contacto{
+
+  .detalle-contacto {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 50px;
+    max-width: 7500px;
   }
 
-  section{
+  .direccion,
+  .correo,
+  .telefonos {
+    padding: 20px;
+  }
+
+  section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: center;
     width: 100%;
     height: 100vh;
-    margin-left: 60px;
-    margin-right: 60px;
-    scroll-snap-align: center; 
+    scroll-snap-align: center;
   }
 
   .container {
@@ -154,28 +177,119 @@ section{
   .titulo-experiencia {
     padding-bottom: 20px;
   }
-
 }
 
-
 @media screen and (max-width: 660px) {
-    
+  .detalle-estudios {
+    text-align: center;
+    padding-top: 15px;
+  }
+
   .estudios .sub-contenido {
-      grid-template-columns: 1fr;
-      grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
   }
   .experiencia .sub-contenido {
-      grid-template-columns: 1fr;
-  }
-  .contacto .sub-contenido {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr;
-      margin-left: 60px;
-      margin-right: 60px;
+    display: flex;
+    flex-direction: column;
   }
 
-  section{
-        
+  .detalle-experiencia {
+    text-align: center;
+  }
+
+  .experiencia-1,
+  .experiencia-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 50px;
+  }
+
+  .experiencia-1 .icon2,
+  .experiencia-2 .icon2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .p-contacto {
+    text-align: center;
+    padding-top: 15px;
+  }
+
+  .direccion,
+  .correo,
+  .telefonos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 300px;
+  }
+
+  .detalles-address,
+  .detalles-phone {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    max-width: 300px;
+    margin-left: 10px;
+  }
+
+  .detalles-email {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.9rem;
+    text-align: center;
+    max-width: 250px;
+    margin-left: 20px;
+  }
+
+  .icon-address,
+  .icon-phone,
+  .icon-email {
+    margin-left: 20px;
+  }
+
+  .titulo-centrado {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 30px;
+  }
+
+  .detalle-contacto {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .p-redes-sociales {
+    text-align: center;
+  }
+
+  .redes-sociales {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 300px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+  }
+
+  .icon-redes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 50px;
+  }
+
+  section {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -184,7 +298,7 @@ section{
     height: 100vh;
     margin-left: 60px;
     margin-right: 60px;
-    scroll-snap-align: center; 
+    scroll-snap-align: center;
   }
   .container {
     width: auto;
@@ -193,6 +307,33 @@ section{
     display: flex;
     scroll-behavior: smooth;
     transition: var(--tran-05);
-    }
+  }
+
+  .foto-perfil {
+    width: 180px;
+    height: 180px;
+    border: 3px solid rgba(8, 161, 149, 0.808);
+    border-radius: 50%;
+    margin-left: 105px;
+    margin-bottom: 35px;
+  }
+
+  .nombre {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-left: 110px;
+    align-items: center;
+    font-size: 45px;
+    font-weight: bold;
+    color: rgb(2, 133, 122);
+  }
+
+  .hola {
+    margin-left: 110px;
+  }
+
+  .developer {
+    margin-left: 110px;
+  }
 }
-  
